# optimizers

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: smoke-tests.yml  tests.yml
src/optimizers/: Annealing.py  ExtendedKalmanFilter.py  Genetic.py  KalmanFilter.py  LevenbergMarquardt.py  Metropolis.py  Newton.py  __init__.py  _utils.py  line_search.py
tests/: test_devices.py  test_line_search.py  test_progress.py  test_runtime.py  test_smoke.py
