[project]
name = "optimizers"
version = "0.1.0"
description = "Non-standard optimizers for PyTorch"
readme = "README.md"
license = "MIT"
authors = [
    {name = "kovacoj"},
]
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.1",
]
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/kovacoj/optimizers"
Repository = "https://github.com/kovacoj/optimizers"
Issues = "https://github.com/kovacoj/optimizers/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
